--- a/frontend /src/assets/css/reset.css
+++ b/frontend /src/assets/css/reset.css
@@ -1,4 +1,4 @@
-/* reset elements' default style */
+/* reset elements default style */
 html,
 body,
 div,
@@ -122,4 +122,8 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+html body .app {
+  height: 100%;
 }
