--- a/frontend /src/components/Nav/nav.css
+++ b/frontend /src/components/Nav/nav.css
@@ -1,5 +1,5 @@
 .nav-wrapper {
-  background-color: #1976d2;
+  background-color: skyblue;
   height: 60px;
   line-height: 60px;
   padding: 0 20px;
