--- a/frontend /src/views/ContactUs/contactUs.css
+++ b/frontend /src/views/ContactUs/contactUs.css
@@ -7,10 +7,10 @@
 }
 
 .contact-us .intro {
-  margin-bottom: 30px;
-  font-weight: 500;
-  color: #333;
-  font-size: 18px;
+    margin-bottom: 30px;
+    font-weight: 500;
+    color: #333;
+    font-size: 23px;
 }
 
 .contact-li {
@@ -29,7 +29,7 @@
   border-top: none;
 }
 
-.contact-li .avatar-img {
+.contact-li .avatar-img1, .avatar-img3, .avatar-img4, .avatar-img5 {
   border-radius: 50%;
   object-fit: cover;
   width: 80px;
