--- a/frontend_/src/views/AboutUs/aboutUs.css
+++ b/frontend_/src/views/AboutUs/aboutUs.css
@@ -6,7 +6,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 90%;
+  height: 100%;
+  padding-top: 60px;
 }
 
 .about-us-container .about {
