--- a/frontend_/src/views/CreateAccount/createAccount.css
+++ b/frontend_/src/views/CreateAccount/createAccount.css
@@ -3,12 +3,17 @@
   background-repeat: no-repeat;
   background-position: center 110px;
   background-size: 100%;
+  height: 100%;
+}
+
+.create-account-form-wrapper {
+  padding-top: 60px;
+  height: 100%;
 }
 
 .create-account-form {
   width: 328px;
   margin: 0 auto;
-  padding-top: 200px;
 }
 
 .create-account-form .title-wrapper {
@@ -33,11 +38,11 @@
   font-size: 14px;
 }
 
-.tip{
+.tip {
   margin-bottom: 12px;
   text-align: right;
 }
 
-.sign-up{
+.sign-up {
   margin-left: 8px;
 }
