--- a/frontend_/src/views/Login/login.css
+++ b/frontend_/src/views/Login/login.css
@@ -3,12 +3,20 @@
   background-repeat: no-repeat;
   background-position: center 110px;
   background-size: 100%;
+  height: 100%;
+}
+
+.login-form-wrapper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding-top: 60px;
 }
 
 .login-form {
   width: 328px;
   margin: 0 auto;
-  padding-top: 200px;
 }
 
 .login-form .title-wrapper {
